--- a/src/components/dictionary/dictionary.scss
+++ b/src/components/dictionary/dictionary.scss
@@ -8,6 +8,11 @@ $bg-dark-color: #fff;
 $highlight-blue-color: #4582EC;
 $highlight-green-color: #02B875;
 
+.card.dictionary-container {
+    border: none;
+    border-radius: 0;
+}
+
 .dictionary-container {
   width: 100%;
   max-width: 1350px;
@@ -17,7 +22,7 @@ $highlight-green-color: #02B875;
 
   .dictionary-header {
     display: flex;
-    padding: 0px;
+    padding: 5px 10px 0 0;
     font-size: $font-size-title;
 
     &__title {
@@ -27,7 +32,7 @@ $highlight-green-color: #02B875;
       flex-grow: 1;
       padding-left: 10px;
 
-      @media (max-width: 992px) { font-size: $font-size-medium; }
+      @media (max-width: 992px) { font-size: 1.2rem; }
       @media (max-width: 767px) {
         font-size: $font-size-regular;
         border-bottom: none;
@@ -50,8 +55,12 @@ $highlight-green-color: #02B875;
       border: 1px solid rgba(0, 0, 0, 0.125);
       border-top-left-radius: 8px;
       border-top-right-radius: 8px;
-      color: #000;
+      color: rgba(108, 117, 125, 0.6);
       cursor: pointer;
+
+      &:hover {
+        color: black;
+      }
 
       &.active {
         border-bottom: 1px solid #fff;
@@ -62,20 +71,20 @@ $highlight-green-color: #02B875;
       @media (max-width: 767px) {
         flex-grow: 1;
         width: 100px;
-        padding: 10px 10px 10px 15px;
+        padding: 5px;
       }
 
-      @media (max-width: 576px) {
-        width: 80px;
-        padding: 5px 5px 5px 10px;
-      }
+      @media (max-width: 576px) { width: 80px; }
     }
 
-    @media (max-width: 767px) { font-size: $font-size-regular;}
+    @media (max-width: 767px) {
+      padding: 10px 0 0 0;
+      font-size: $font-size-regular;
+    }
   }
 
   .wordlist {
-    padding: 20px;
+    padding-top: 15px;
 
     .notification-wrapper {
       height: 50vh;
@@ -218,7 +227,7 @@ $highlight-green-color: #02B875;
 
     &__meaning-title,
     &__example-title {
-      color: $bg-dark-color;
+      color: rgba(108, 117, 125, 0.5);
     }
 
     &__statistic-item {
