--- a/src/components/learn-page/learn-page.scss
+++ b/src/components/learn-page/learn-page.scss
@@ -13,21 +13,43 @@
     box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
   }
 
+  &__word {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+  }
+
+  &__input {
+    margin-right: 10px;
+  }
+
   &__card-header {
     background-color: #fff !important;
     border-bottom: none !important;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0px !important;
+  }
+
+  &__card-body {
+    padding: 0px !important;
   }
 
   &__card-footer {
     background-color: #fff !important;
     border-top: none !important;
+    display: flex;
+    justify-content: space-around;
   }
 
   &__image {
     background-repeat: no-repeat !important;
     background-position-x: center !important;
-    width: 100%;
-    height: 280px;
+    background-size: cover !important;
+    margin: 10px 20px;
+    padding-bottom: 50%;
+    border-radius: 5px;
   }
 
   &__sound {
@@ -50,4 +72,18 @@
     width: 100%;
     margin: 0px 20px;
   }
+}
+
+.no-see {
+  b, i {
+    filter: blur(5px);
+  }
+}
+
+.hidden {
+  display: none !important;
+}
+
+.list-group-item {
+  padding: 0.3rem 1.25rem !important;
 }
