--- a/src/components/learn-page/learn-page.scss
+++ b/src/components/learn-page/learn-page.scss
@@ -13,6 +13,14 @@
     box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
   }
 
+  &__card-info {
+    margin: 20px 0px;
+    padding: 1.25rem;
+    width: 100%;
+    max-width: 34.5rem;
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.4);
+  }
+
   &__word {
     display: flex;
     justify-content: center;
@@ -44,6 +52,7 @@
   }
 
   &__image {
+    background-color: #aaa;
     background-repeat: no-repeat !important;
     background-position-x: center !important;
     background-size: cover !important;
