style: add styles to home page

--- a/src/components/home-page/PromoStyle.scss
+++ b/src/components/home-page/PromoStyle.scss
@@ -2,6 +2,7 @@
 @import './styles/button/button';
 @import './styles/info/info';
 @import './styles/rules/rules';
+@import './styles/about/about.scss';
 
 body {
   margin: 0;
