--- a/src/components/home-page/styles/info/_info.scss
+++ b/src/components/home-page/styles/info/_info.scss
@@ -1,9 +1,9 @@
 .info{
-  padding: 40px 200px;
+  padding: 40px 17%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .info-text{
