--- a/src/components/home-page/styles/slide/_slide.scss
+++ b/src/components/home-page/styles/slide/_slide.scss
@@ -27,7 +27,7 @@
 .slide-container__slide img{
   width: 100%;
   height: 100%;
-  filter: brightness(60%);
+  filter: brightness(90%);
 }
 
 .slide-container__slide iframe{
@@ -49,6 +49,10 @@
 
 .slider--show{
   display: block;
+}
+
+.carousel-caption.d-block{
+  color: #141414a2;
 }
 
 @media screen and (max-width: 1199px){
