fix: links, slider, rules, styles

--- a/src/components/home-page/styles/rules/_rules.scss
+++ b/src/components/home-page/styles/rules/_rules.scss
@@ -6,6 +6,11 @@
   text-align: center;
 }
 
+.rules__rule h3{
+  max-width: 240px;
+  margin-top: 20px;
+}
+
 .rules img{
   display: block;
   width: 250px;
