--- a/src/components/learn-page/learn-page.scss
+++ b/src/components/learn-page/learn-page.scss
@@ -28,8 +28,16 @@
     margin: 5px;
   }
 
+  &__next {
+    margin: 0px 10px !important;
+  }
+
   &__input {
-    margin-right: 10px;
+    margin: 0px 10px !important;
+    padding: 4px 2px;
+    font-family: monospace;
+    font-size: 16px;
+    border-radius: 3px;
   }
 
   &__card-header {
@@ -37,7 +45,7 @@
     border-bottom: none !important;
     display: flex;
     justify-content: flex-end;
-    padding: 0px !important;
+    padding: 10px 20px !important;
   }
 
   &__card-body {
