feat: added hard and delete buttons

--- a/src/components/learn-page/learn-page.scss
+++ b/src/components/learn-page/learn-page.scss
@@ -44,7 +44,8 @@
     background-color: #fff !important;
     border-bottom: none !important;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px 20px !important;
   }
 
